--- a/web/map.html
+++ b/web/map.html
@@ -27,6 +27,7 @@
     <span id="routeInfo" class="status"></span>
     <button type="button" id="btnCollapse" title="收起菜单">收起</button>
   </div>
+  <div id="restrictionHint" class="restriction-hint" style="display: none;" title="限行提示"></div>
   <div id="routeStrategyPanel" class="">
     <button type="button" data-policy="LEAST_TIME">用时最短</button>
     <button type="button" data-policy="LEAST_DISTANCE">距离最短</button>
