优化驾车路线规划功能，支持多条路线返回及选择，增强用户界面交互体验

--- a/web/map.html
+++ b/web/map.html
@@ -35,6 +35,10 @@
     <button type="button" data-policy="AVOID_CONGESTION">躲避拥堵</button>
     <button type="button" id="btnOtherRoute">其他线路</button>
   </div>
+  <div id="otherRoutesPanel" class="route-options-panel" style="display: none;">
+    <div class="route-options-title">选择线路</div>
+    <div id="otherRoutesList"></div>
+  </div>
   <button type="button" id="btnToggleUI" class="show" title="显示菜单">≡ 菜单</button>
   <div id="navPanel" class="nav-panel" style="display: none;">
     <div id="nextStopText" class="next-stop"></div>
