优化驾车路线策略，增加不走高速选项及相关逻辑支持

--- a/web/map.html
+++ b/web/map.html
@@ -33,6 +33,7 @@
     <button type="button" data-policy="LEAST_DISTANCE">距离最短</button>
     <button type="button" data-policy="LEAST_FEE">费用最省</button>
     <button type="button" data-policy="AVOID_CONGESTION">躲避拥堵</button>
+    <button type="button" data-policy="AVOID_HIGHWAY">不走高速</button>
     <button type="button" id="btnOtherRoute">其他线路</button>
   </div>
   <div id="otherRoutesPanel" class="route-options-panel" style="display: none;">
