优化驾车路线策略，调整默认策略为“默认”并更新相关逻辑支持

--- a/web/map.html
+++ b/web/map.html
@@ -29,6 +29,7 @@
   </div>
   <div id="restrictionHint" class="restriction-hint" style="display: none;" title="限行提示"></div>
   <div id="routeStrategyPanel" class="">
+    <button type="button" data-policy="DEFAULT">默认</button>
     <button type="button" data-policy="LEAST_TIME">用时最短</button>
     <button type="button" data-policy="LEAST_DISTANCE">距离最短</button>
     <button type="button" data-policy="LEAST_FEE">费用最省</button>
